--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@tanstack/react-query": "^5.82.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.3",
-    "sonner": "^2.0.6"
+    "sonner": "^2.0.6",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.29.0",
